# streamviewer

./: .gitignore  LICENSE  README.md  create_test_stream.bat  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/org/nmelihsensoy/streamviewer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  gstreamer_android.c  gstreamer_android.cpp  native-lib.cpp
app/src/main/java/org/freedesktop/gstreamer/: GStreamer.java  GstAhcCallback.java  GstAhsCallback.java  GstAmcOnFrameAvailableListener.java
app/src/main/java/org/nmelihsensoy/streamviewer/: HlsServer.java  MainActivity.java  ModelHelper.java  ServerURLHandler.java
app/src/main/res/drawable/: baseline_add_to_queue_24.xml  baseline_airplay_24.xml  settings_ethernet_24px.xml  wifi_tethering_24px.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/org/nmelihsensoy/streamviewer/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
